<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        tools:context="com.example.android.golfstrokes.MainActivity">

        <!--Vertical Line-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray" />

        <!--Golf Hole Numbers-->
        <LinearLayout
            android:id="@+id/holes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="65dp"
                android:text="@string/hole"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#616161"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                style="@style/Buttons"
                android:padding="8dp"
                android:text="@string/_1"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_2"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_3"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_4"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_5"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_6"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_7"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_8"
                />

            <TextView
                style="@style/Buttons"
                android:text="@string/_9"
                />
        </LinearLayout>

        <!--Vertical Line-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray" />

        <!--Buttons to subtract Stroke-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/MinusButton"
                android:layout_marginTop="100dp"
                android:onClick="minusStrokeHole1"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole2"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole3"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole4"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole5"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole6"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole7"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole8"
                />

            <Button
                style="@style/MinusButton"
                android:onClick="minusStrokeHole9"
                />


        </LinearLayout>

        <!--Strokes per hole-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical">

            <!--Strokes heading-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/strokes"
                android:textColor="#616161"
                android:textSize="18sp" />

            <!--Total Full Strokes count at top-->
            <TextView
                android:id="@+id/full_strokes"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_0"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/stroke_1"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_2"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_3"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_4"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_5"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_6"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_7"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_8"
                style="@style/Buttons"
                android:text="@string/_0"
                />

            <TextView
                android:id="@+id/stroke_9"
                style="@style/Buttons"
                android:text="@string/_0"
                />

        </LinearLayout>

        <!--Buttons to add  Stroke-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/PlusButton"
                android:layout_marginTop="100dp"
                android:onClick="addStrokeHole1"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole2"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole3"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole4"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole5"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole6"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole7"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole8"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addStrokeHole9"
                />


        </LinearLayout>

        <!--Vertical Line-->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/darker_gray" />

        <!--Buttons to subtract Putts-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/MinusButton"
                android:layout_marginTop="100dp"
                android:onClick="minusPuttHole1" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole2" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole3" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole4" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole5" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole6" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole7" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole8" />

            <Button
                style="@style/MinusButton"
                android:onClick="minusPuttHole9" />
        </LinearLayout>

        <!--Putts per hole-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/putts"
                android:textColor="#616161"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/putts"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/_0"
                android:textSize="38sp" />


            <TextView
                android:id="@+id/putt_1"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_2"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_3"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_4"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_5"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_6"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_7"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_8"
                style="@style/PlusButton"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/putt_9"
                style="@style/PlusButton"
                android:text="@string/_0" />

        </LinearLayout>

        <!--Buttons to add Putts-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <Button
                android:layout_marginTop="100dp"
                style="@style/PlusButton"
                android:onClick="addPuttHole1"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole2"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole3"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole4"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole5"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole6"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole7"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole8"
                />

            <Button
                style="@style/PlusButton"
                android:onClick="addPuttHole9"
                />
        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_layout"
        android:orientation="horizontal">

        <!--Reset Scores-->
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:onClick="resetScores"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_toRightOf="@id/reset"
            android:layout_toEndOf="@+id/reset"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/total_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/total"
            android:layout_toEndOf="@+id/total"
            android:text="@string/_0"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp" />

    </RelativeLayout>

</RelativeLayout>